@@ -8,6 +8,7 @@ Version 1.2.3
 - added Spanish, German and Russian translations (thanks to Komannder and me)
 - Security improvement: if user try to login with email of existing local account, that is not bond to current social network, he will be asked for password to confirm binding.
 - added support of validatePassword() callback - alias for verifyPassword()
+- added widget HOAuthActive - display login buttons of social networks bond to current user (Charles)
 
 Version 1.2.2
 -------------
